// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad category 1`] = `
Object {
  "category": Object {
    "key": "yup:mixed.oneOf",
    "options": Object {
      "values": "kayaking, hazards, supply, misc",
    },
  },
}
`;

exports[`should be invalid for bad id 1 1`] = `
Object {
  "id": "yup:string.slug",
}
`;

exports[`should be invalid for bad id 2 1`] = `
Object {
  "id": "yup:string.slug",
}
`;

exports[`should be invalid for bad id 3 1`] = `
Object {
  "id": "yup:string.slug",
}
`;

exports[`should be invalid for empty name 1`] = `
Object {
  "name": "yup:string.nonEmpty",
}
`;

exports[`should be invalid for extra fields 1`] = `
Object {
  "undefined": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;
